apps/desktop/src-tauri/build_errors_tauri.txt
    Checking tauri-appsuper-punch-out-editor v0.1.0 (C:\Users\dferr\Desktop\super_punch_out_editor\editor\apps\desktop\src-tauri)
warning: unused imports: `decode_4bpp_sheet` and `tiles_to_image`
 --> src\lib.rs:3:41
  |
3 | use asset_core::{decode_palette, Color, decode_4bpp_sheet, encode_4bpp_sheet, tiles_to_image, image_to_tiles};
  |                                         ^^^^^^^^^^^^^^^^^                     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `image`
   --> src\lib.rs:118:15
    |
118 |     let img = image::open(png_path).map_err(|e| e.to_string())?.to_rgba8();
    |               ^^^^^ use of unresolved module or unlinked crate `image`
    |
    = help: if you wanted to use a crate named `image`, use `cargo add image` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
warning: `tauri-appsuper-punch-out-editor` (lib) generated 1 warning
error: could not compile `tauri-appsuper-punch-out-editor` (lib) due to 1 previous error; 1 warning emitted
